# samarthya.github.io

./: .gitignore  .nojekyll  README.md  _metadata.yml  _quarto.yml  about.html  about.qmd  ad688.html  ad688.qmd  angular.json  assign01.docx  assign01.qmd  index.html  index.qmd  index1.html  karma.conf.js  package-lock.json  package.json  projects.html  projects.qmd  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml  styles.css  theme-dark.scss  theme-light.scss
.github/workflows/: publish.yml  quartopublish.yml
assets/includes/: brand.html  footer.html  ga.html  head.html
assets/js/: github-tabs.js
css/: style.css
e2e/src/: app.e2e-spec.ts
hm/: index.html  main-es2015.06f0685d358ceb7638d5.js
js/: main.js
samarthya/: index.html  main-es2015.7cf8cbfe4c7540e4298c.js  main-es5.075b2b192a1f8c33eb32.js  main-es5.ce222925133434472188.js
site_libs/bootstrap/: bootstrap-19d53267d68e7964a2f3967935339b2f.min.css  bootstrap-4c3cf312ce75147df90447c77b43b251.min.css  bootstrap-6289a4ec33cb41b8c41e4e9dbe33a099.min.css  bootstrap-bf780f34dd70b02f70b9c7e0c168d62c.min.css  bootstrap-d6dea7191d8ab34b8a7b81e465b405c8.min.css  bootstrap-d8bce306a4c47d71f1e7aa5fc1e1385a.min.css  bootstrap-dark-9b8e7a1935202e58d007c33cbf0f1194.min.css  bootstrap-e918efbb858fbc7fba7c50e4e73c9085.min.css
site_libs/quarto-html/: quarto-syntax-highlighting-2d3ea4e19ba6f0b300593f837c8b54ca.css  quarto-syntax-highlighting-c55b07ed742b9fc01ab2924a6c4bcc35.css  quarto-syntax-highlighting-dark-22dbfd01472d8820860c0c4137ea9085.css  (+2 more)
src/: index.html  styles.css
(+4 files in other folders)
