[project]
name = "samarthya-github-io"
version = "0.1.0"
description = "Samarthya: Portfolio"
authors = [
    {name = "samarthya"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "samarthya"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
