[tool.poetry]
name = "samarthya-github-io"
version = "0.1.0"
description = "Samarthya: Portfolio"
authors = ["samarthya"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.24.0"
pandas = "^2.0.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
plotly = "^5.13.0"
psutil = "^5.9.0"
requests = "^2.32.4"
python-dateutil = "^2.8.2"
timeago = "^1.0.16"
beautifulsoup4 = "^4.12.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
